syntax = "proto3";

option go_package = './proto/generated';

package proto;

message TaskId{
    uint64 Id = 1;
}

